tests/sources/invalid/classes/class_static_method_errors.fire
// Invalid static/instance method call patterns

import @firescript/std.io.println;

class Tool {
    static int32 id(int32 x) {
        return x;
    }

    int32 twice(int32 x) {
        return x * 2i32;
    }
}

Tool t = Tool();
println(t.id(1i32));      // Error: static method called on instance  //~ ERROR FS-SEM-0010 @11
println(Tool.twice(2i32)); // Error: instance method called on type  //~ ERROR FS-SEM-0010 @14

// Wrong argument count for a static method call
println(Tool.id(1i32, 2i32));  //~ ERROR FS-SEM-0010 @14

// Wrong argument type for a static method call
println(Tool.id("x"));  //~ ERROR FS-SEM-0010 @17
